vlib/v/checker/tests/str_method_0_arguments.out
vlib/v/checker/tests/str_method_0_arguments.vv:5:1: error: .str() methods should have 0 arguments 
    3 | }
    4 | 
    5 | fn (z Zzz) str(x int) string {
      | ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    6 |     return 'z: $z.x'
    7 | }
