vlib/v/checker/tests/str_method_0_arguments.vv
struct Zzz {
	x int
}

fn (z Zzz) str(x int) string {
    return 'z: $z.x'
}

fn main() {
	println(Zzz{123})
}
